<resources>
    <string name="app_name">Mafia</string>
    <string name="btn_ok">В бой!</string>
    <string name="game">Играть</string>
    <string name="result">Результаты</string>
    <string name="settigs">Настройки</string>
    <string name="how_to_game">Как играть</string>
    <string name="about_game">Об игре</string>
    <string name="version">Версия игры: %1$s</string>
    <string name="time_count_down">Обратный отсчет: \n%s</string>
    <string name="text_dialog">Получаем роль...</string>
    <string name="no_free_rooms">All rooms are busy</string>
    <string name="count_free_place">Cвободных мест:\n %1$d</string>
    <string name="civilian">Мирный гражданин</string>
    <string name="mafia">Мафия</string>


    <string name="rule_game">\t В принципе в игре все решает смена суток: наступает ночь — просыпается мафия.\n\n
        \t Во время ночи все игроки закрывают глаза, и только мафия остается с открытыми.\n\n
        \t Знаками мафия договаривается, кого из мирных жителей они убивают.\n Затем мафия засыпает вместе с горожанами, и наступает день.\n\n
        \t Все открывают глаза. Ведущий сообщает, что одного из жителей убила мафия (убитый покидает игру).\n\n
        \t Теперь задача игроков — вычислить преступников.</string>
    <string name="title_menu">Main menu</string>
    <string name="title_about">About</string>
    <string name="title_game">Game</string>
    <string name="title_how">How</string>
    <string name="title_learn">Learn</string>
    <string name="title_result">Result</string>
    <string name="title_splash">Splash</string>
    <string name="auth_menu">Auth</string>

    <string-array name="naputstvie">
        <item>Приветствую тебя мой друг! \n</item>>
        <item>Ты попал в игру "Мафия". \n </item>>
        <item>Игра, где ты можешь найти и расправиться с преступной группировкой и изгнать нечесть из города! \n</item>
        <item>Ну что, ты готов  совершить правосудие? \n</item>
        <item>Тогда выживи, если сможешь! \n</item>
    </string-array>


    <!--> Result values<-->
    <string name="statistic">Статистика</string>
    <string name="actor">Персонаж</string>
    <string name="games_count">Кол-во раз</string>
    <string name="time">Время</string>

    <!--    Rules game-->
    <string-array name="rules_game">
        <item>
            Игровой процесс разделён на две фазы — «день» и «ночь».
            Когда ведущий объявляет в городе фазу ночи, игроки закрывают глаза — «спят».
        </item>
        <item>
            Затем мафия знакомиться друг с другом
        </item>
        <item>
            После знакомства мафии ведущий объявляет день.
            Каждому из игроков по очереди дается 30 секунд на знакомство
        </item>
        <item>
            Когда все познакомились, ведущий обьявляет ночь.
            Мафия выбирает кого убить путем нажатия на карточку одного из игроков
        </item>
        <item>
            Наступает день и начитается обсуждение.
            Каждый высказывает свое предположение в течение 30 секунд
        </item>
        <item>
            По прошествию 5 минут или досрочном голосовании.
            У кого больше всего голосов выбывает - снова начинается ночь.
        </item>

    </string-array>

    <string-array name="settings">
        <item>Включить/Выключить музыку</item>
        <item>Использовать только Wi-Fi</item>
    </string-array>
</resources>
