<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.mafia.view.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.example.mafia.view.AuthFragment"
        android:label="@string/auth_menu"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.mafia.view.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_how"
        android:name="com.example.mafia.view.HowFragment"
        android:label="@string/title_how"
        tools:layout="@layout/fragment_how" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.mafia.view.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.mafia.view.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.example.mafia.view.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.mafia.view.SettingFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_setting" />


</navigation>