<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/img_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <LinearLayout
        android:id="@+id/main_menu"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:background="@drawable/background_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game"
            android:layout_weight="1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_result"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/result"
            android:layout_weight="1"
            android:layout_marginVertical="1dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_setting"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settigs"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_how_game"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/how_to_game"
            android:layout_weight="1"
            android:layout_marginVertical="1dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_game"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>